tests/fail/union_forbidden_types.tk
union BadBool {
    b: bool,
    val: u64
}

union BadU8 {
    b: u8,
    val: u64
}

fn main() {}
